--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,19 +3,25 @@
   "version": "1.0.0-SNAPSHOT",
   "private": true,
   "scripts": {
-    "start": "npm run serve",
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "start": "vue-cli-service serve",
+    "start-ci": "vue-cli-service serve --mode ci-dev",
+    "start-all": "vue-cli-service serve --mode all-dev",
+    "build": "vue-cli-service build --mode all",
+    "build-ci": "vue-cli-service build --mode ci",
+    "build-all": "vue-cli-service build --mode all"
   },
   "dependencies": {
-    "vue": "2.5.22",
+    "markdown-it": "8.4.2",
+    "material-design-icons": "3.0.1",
+    "materialize-css": "1.0.0",
+    "vue": "2.6.6",
     "vue-router": "3.0.2"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "3.3.0",
-    "@vue/cli-service": "3.3.1",
+    "@vue/cli-plugin-babel": "3.4.0",
+    "@vue/cli-service": "3.4.0",
     "node-sass": "4.11.0",
     "sass-loader": "7.1.0",
-    "vue-template-compiler": "2.5.22"
+    "vue-template-compiler": "2.6.6"
   }
 }
